Updating Old Github Porjects from Welbilt

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -38,7 +38,7 @@
     "stars": 5,
     "tags": ["tbm","vfd","python","onshape","competition","robotics"],
     "stack": ["Python","Onshape","VFD","Electronics","Rapid Prototyping"],
-    "repo": "https://github.com/yashpatel1314/",
+    "repo": null,
     "demo": null,
     "images": ["./assets/images/TBM.jpg", "./assets/images/ground.jpg", "./assets/images/team.jpg"],
     "added": "2025-01-01",
@@ -53,7 +53,7 @@
     "stars": 4,
     "tags": ["python","interpreter","compiler","programming-language"],
     "stack": ["Python","Compiler Design","Interpreter"],
-    "repo": "https://github.com/yashpatel1314/",
+    "repo": "https://github.com/yashpatel1314/NewLanguage",
     "demo": null,
     "images": [],
     "added": "2025-01-01",
@@ -68,7 +68,7 @@
     "stars": 5,
     "tags": ["react","ros2","slam","uwb","navigation","competition","award-winning"],
     "stack": ["React","ROS2","Python","UWB","SLAM","PRM"],
-    "repo": "https://github.com/yashpatel1314/",
+    "repo": "https://github.com/yashpatel1314/gui_interface",
     "demo": null,
     "images": ["./assets/images/roverinside.jpg", "./assets/images/roveroutside.jpg", "./assets/images/navaward.jpg"],
     "added": "2024-10-01",
@@ -105,6 +105,36 @@
     "dateRange": "Jan 2023 — Apr 2023"
   },
   {
+    "id": 12,
+    "name": "Fixture Database Project",
+    "organization": "Welbilt",
+    "description": "Database system for 500+ fixtures with search functionality and image upload capabilities for efficient fixture management.",
+    "longDescription": "• Created a database system that processes input from 500+ fixtures stored in an Excel file.\n• Developed search functionality to quickly locate and retrieve fixture information.\n• Implemented image upload feature with a dedicated button for visual fixture identification.\n• Built user-friendly interface for accessing comprehensive fixture data and associated images.",
+    "stars": 3,
+    "tags": ["database","excel","data-management","ui"],
+    "stack": ["Excel","Database","UI Design","Data Management"],
+    "repo": "https://github.com/yashpatel1314/JigsFixturesDatabase",
+    "demo": null,
+    "images": [],
+    "added": "2025-01-01",
+    "dateRange": "Mar 2023 — Apr 2023"
+  },
+  {
+    "id": 11,
+    "name": "Unit Locator Project",
+    "organization": "Welbilt",
+    "description": "Algorithm that cross-references unit lists with prioritized units, highlighting matches and flagging missing units for efficient inventory management.",
+    "longDescription": "• Developed an algorithm that takes a list of units and cross-references it with the prioritized units list.\n• Highlighted units that appear on both the prioritized list and master list for easy identification.\n• Flagged units that are on the prioritized list but missing from the master list and placed them on a separate page.\n• Organized highlighted units into 3 different pages based on unit type for better categorization.\n• Calculated the total amount of each unit type on a separate Excel sheet for inventory tracking.",
+    "stars": 3,
+    "tags": ["excel","algorithm","inventory","data-processing"],
+    "stack": ["Excel","VBA","Data Processing","Algorithm"],
+    "repo": "https://github.com/yashpatel1314/UnitLocator",
+    "demo": null,
+    "images": [],
+    "added": "2025-01-01",
+    "dateRange": "Jan 2023 — Feb 2023"
+  },
+  {
     "id": 2,
     "name": "Automated Forklift Prototype",
     "organization": "University of Waterloo",
@@ -113,7 +143,7 @@
     "stars": 4,
     "tags": ["robotc","ev3","automation","3d-printing"],
     "stack": ["RobotC","EV3","3D Printing"],
-    "repo": "https://github.com/yashpatel1314/",
+    "repo": "https://github.com/yashpatel1314/Final-Robot",
     "demo": null,
     "images": ["./assets/images/robot1.png", "./assets/images/robot2.png","./assets/images/robot3.png","./assets/images/robot4.png"],
     "added": "2022-12-01",
@@ -128,7 +158,7 @@
     "stars": 2,
     "tags": ["arduino","electronics","embedded"],
     "stack": ["Arduino","C++","Electronics"],
-    "repo": "https://github.com/yashpatel1314/",
+    "repo": "https://github.com/yashpatel1314/traffic_control_project",
     "demo": null,
     "images": ["./assets/images/light1.png", "./assets/images/light2.png"],
     "added": "2022-04-01",
